Added Maven install support.

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'maven'
+
+group = 'org.spearal'
+version =  spearalVersion
 
 repositories {
     mavenLocal()
