--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: java
 script: ./gradlew clean install
 jdk:
-    - openjdk7
+- openjdk7
+deploy:
+  provider: releases
+  skip_cleanup: true
+  api_key:
+    secure: SLEBkybLr40Qt0kILFu6WxaIvW190XgMQI3VgBOb9FiLP5xI1TVHSyb58gUgbwc/ifi4FcBqnwzRpt7v91gRe61s0fOf/CbuflU6hmZOaC4D/+dGbfbihYO6/VV2cyFgpjAF5ndIFawW8q4qeDId9SwwsynF7LA0bTyA0Ce2YZc=
+  app: spearal-java
+  on:
+    repo: spearal/spearal-java
